--- a/css/main.css
+++ b/css/main.css
@@ -72,8 +72,14 @@ body {
 }
 
 section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 address {
@@ -82,36 +88,46 @@ address {
 
 .section-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-color-text);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
-
-.current {
-  position: relative;
-  color: var(--accent-color-text);
-}
-
-.current::after {
-  content: " ";
-  display: block;
-  height: 4px;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  border-radius: 2px;
-  background-color: var(--accent-color-text);
+@media screen and (min-width: 1200px) {
+  .section-title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 290px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 738px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 @-webkit-keyframes animatemodal {
@@ -171,7 +187,11 @@ address {
             transform: scale(1);
   }
 }
-.hdcontact {
+.header {
+  position: relative;
+}
+
+.header {
   font-weight: 500;
   color: var(--second-color-text);
   margin-right: 50px;
@@ -184,22 +204,26 @@ address {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hdcontact:last-child {
+.header:last-child {
   margin-right: 0;
 }
-.hdcontact:hover, .hdcontact:focus {
+.header:hover, .header:focus {
   color: var(--accent-color-text);
+}
+@media screen and (min-width: 768px) {
+  .header {
+    gap: 10px;
+    margin-left: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
 }
 
 .contact-icon {
   margin-right: 10px;
   fill: currentColor;
-}
-
-.contact-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .head-portfolio {
@@ -212,8 +236,8 @@ address {
 }
 
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/Img-bgr/bgf.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/Img-bgr/bgf.jpg);
@@ -225,43 +249,72 @@ address {
   margin-left: auto;
   margin-right: auto;
 }
-
-.hero-block > .button {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-}
-
-.hero-block {
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero-title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--three-color-text);
-  width: 696px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
 }
-
-.work-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .hero-title {
+    width: 360px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
 }
 
-.wtitle {
-  margin-bottom: 10px;
+@media screen and (min-width: 480px) {
+  .work-container {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  .work-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .work-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
+.list-item {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .list-item {
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+  }
 }
 
 .wtitle {
@@ -270,6 +323,8 @@ address {
   font-weight: 700;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 .subtitle {
@@ -280,6 +335,12 @@ address {
 }
 
 .quality {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: var(--second-bg);
   padding-left: 100px;
   padding-right: 100px;
@@ -296,6 +357,16 @@ address {
 
 .doing {
   padding-top: 0px;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .doing {
+    display: block;
+  }
+}
+
+.doing__item {
+  position: relative;
 }
 
 .doing__text {
@@ -326,21 +397,28 @@ address {
   gap: 30px;
 }
 
-.doing__item {
-  position: relative;
-}
-
 .team {
   background-color: var(--second-bg);
-  padding: 94 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
-.team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style-type: none;
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    list-style-type: none;
+    gap: 30px;
+  }
 }
 
 .team__card {
@@ -348,9 +426,9 @@ address {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  width: 270px;
+  margin-right: 0;
+  margin-bottom: 30px;
 }
-
 .team__card-img {
   display: block;
   max-width: 100%;
@@ -384,31 +462,50 @@ address {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: flex;
+  gap: 30px;
+}
+
+.client__icon {
+  -ms-flex-preferred-size: calc(50% - 15px);
+      flex-basis: calc(50% - 15px);
+}
+@media screen and (min-width: 768px) {
+  .client__icon {
+    -ms-flex-preferred-size: calc(33.3333333333% - 30px);
+        flex-basis: calc(33.3333333333% - 30px);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client__icon {
+    -ms-flex-preferred-size: calc(16.6666666667% - 30px);
+        flex-basis: calc(16.6666666667% - 30px);
+  }
 }
 
 .client__icon-list {
-  width: 170px;
-  height: 92px;
-  border: 1px solid var(--six-bg);
   border-radius: 4px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+      justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+      align-items: center;
+  border: 1px solid var(--six-bg);
   fill: var(--six-bg);
+  color: var(--six-bg);
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .client__icon-list:hover,
@@ -417,22 +514,69 @@ address {
   fill: var(--accent-color-text);
 }
 
-.client__icon:not(:last-child) {
-  margin-right: 30px;
-}
-
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.footer-items {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+.address-blok {
+  text-align: center;
+  margin-right: 0px;
+}
+@media screen and (min-width: 768px) {
+  .address-blok {
+    margin-right: 165px;
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .address-blok {
+    margin-right: 70px;
+    margin-bottom: 0;
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+    -ms-flex-align: baseline;
+        align-items: baseline;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-items {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
+.social-footer {
+  margin-top: 60px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .social-footer {
+    margin-right: 93px;
+    text-align: start;
+  }
+}
+
+.subscribe-group {
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe-group {
+    text-align: start;
+  }
 }
 
 .address {
@@ -487,6 +631,13 @@ address {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 60px;
 }
 
 .footer-header {
@@ -498,9 +649,10 @@ address {
   color: var(--three-color-text);
   margin-bottom: 20px;
 }
-
-.address-blok {
-  margin-right: 70px;
+@media screen and (min-width: 1200px) {
+  .footer-header {
+    text-align: start;
+  }
 }
 
 .footer-icon {
@@ -530,14 +682,17 @@ address {
   margin-right: 10px;
 }
 
-.social-footer {
-  margin-right: auto;
-}
-
 .footer-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
+}
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-box;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
 .mail-subscribe {
@@ -557,6 +712,14 @@ address {
 }
 .mail-subscribe:hover, .mail-subscribe:focus {
   border: 1px solid var(--three-color-text);
+}
+@media screen and (min-width: 1200px) {
+  .mail-subscribe {
+    width: 358px;
+    margin-right: 12px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .mail-subscribe::-webkit-input-placeholder {
@@ -622,9 +785,17 @@ address {
   background-color: var(--accent-color-text);
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .subscribe-btn:hover, .subscribe-btn:focus {
   background-color: var(--six-bg);
+}
+@media screen and (min-width: 1200px) {
+  .subscribe-btn {
+    margin-top: 0;
+  }
 }
 
 .subscribe-text {
@@ -692,15 +863,32 @@ address {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  gap: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .container-portfolio {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
 }
 
 .filter-link:last-child {
   margin-right: 0;
 }
 
-.portfolio-link {
-  margin-right: 29px;
-  margin-bottom: 29px;
+@media screen and (min-width: 768px) {
+  .portfolio-link {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+    flex-basis: calc(50% - 15px);
+  }
 }
 
 .portfolio-link:nth-child(3n) {
@@ -725,10 +913,30 @@ address {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-bottom: 50px;
+}
+@media screen and (max-width: 767px) {
+  .filter-nav {
+    row-gap: 15px;
+    -webkit-column-gap: 8px;
+    -moz-column-gap: 8px;
+    column-gap: 8px;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    max-width: 400px;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .filter-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
 }
 
 .our-work {
@@ -790,6 +998,110 @@ address {
 .hidden-image-text {
   overflow: hidden;
   position: relative;
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    padding: 48px 40px;
+    background-color: #fff;
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu.js-menu-container.is-open {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  fill: var(--main-color-text);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .icon-close {
+  display: none;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.mobile-icon {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .mobile-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 10px;
+  }
+}
+
+.mobile-icon {
+  /* display: -webkit-box; */
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  /* list-style: none; */
+  /* -webkit-box-pack: start; */
+  -ms-flex-pack: start;
+  /* justify-content: flex-start; */
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 64px;
+  padding: 0;
+  margin-bottom: 48px;
+  margin-left: 40px;
+}
+
+.mobile-icon__link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color-text);
+  text-decoration: none;
 }
 
 .button {
@@ -933,11 +1245,10 @@ textarea {
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--main-color-text);
-  margin-right: 93px;
   -webkit-animation-name: animatelogo;
           animation-name: animatelogo;
   -webkit-animation-duration: 3000ms;
@@ -946,6 +1257,18 @@ textarea {
           animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-animation-delay: 1000ms;
           animation-delay: 1000ms;
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .logo-first {
@@ -963,10 +1286,37 @@ textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .navigator {
   margin-right: auto;
+  padding-left: 0;
+  margin-top: 0;
+  height: 100%;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .navigator {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 767px) {
+  .navigator {
+    margin-bottom: auto;
+  }
 }
 
 .navlist {
@@ -980,6 +1330,22 @@ textarea {
 }
 .navlist:hover, .navlist:focus {
   color: var(--accent-color-text);
+}
+
+.current {
+  position: relative;
+  color: var(--accent-color-text);
+}
+
+.current::after {
+  content: " ";
+  display: block;
+  height: 4px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  border-radius: 2px;
+  background-color: var(--accent-color-text);
 }
 
 .navigator-list {
@@ -1063,9 +1429,8 @@ textarea {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  width: calc(100% - 30px);
   padding: 40px;
-  min-height: 581px;
-  min-width: 528px;
   background-color: var(--three-color-text);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1076,10 +1441,20 @@ textarea {
           animation-duration: 3000ms;
   -webkit-animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-animation-delay: 250ms;
-          animation-delay: 250ms;
-  -webkit-animation-iteration-count: 2;
-          animation-iteration-count: 2;
+  -webkit-animation-delay: 1000ms;
+          animation-delay: 1000ms;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    max-width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+  }
 }
 
 .modal-header {
