--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import "./layouts/client";
 @import "./layouts/footer";
 @import "./layouts/proform";
+@import "./layouts/mobile-menu";
 
 
 // componets style 
