--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,35 +5,29 @@ body {
     letter-spacing: 0.03em;
 }
 section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 address {
     font-size: normal;
 }
 .section-title {
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--main-color-text);
-    margin-bottom: 50px;
-}
-.current {
-    position: relative;
-    color: var(--accent-color-text)
-}
+    margin-bottom: 30px;
 
-.current::after {
-    content: " ";
-
-    display: block;
-    height: 4px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    border-radius: 2px;
-
-    background-color: var(--accent-color-text);
+    @media screen and (min-width: 1200px) {
+        font-size: 36px;
+        line-height: 1.17;
+        margin-bottom: 50px;
+        }
 }
