--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,27 @@
 .container {
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+        width: 290px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+
+// mobile styles
+@media screen and (min-width: 480px) {
+        width: 450px;
+        
 }
+
+// tablet styles
+    @media screen and (min-width: 768px) {
+       width: 738px;
+       padding-left: 0;
+       padding-right: 0;
+    }
+
+// desktop styles
+    @media screen and (min-width: 1200px) {
+       width: 1200px;
+       padding-left: 15px;
+       padding-right: 15px;
+    }
+ }
