--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -10,16 +10,24 @@
 .logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     color: var(--main-color-text);
-    margin-right: 93px;
-
+    
     animation-name: animatelogo;
     animation-duration: 3000ms;
     animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     animation-delay: 1000ms;
+
+    @media screen and (min-width: 768px) {
+        margin-right: 88px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-right: 93px;
+        font-size: 26px;
+        line-height: 1.19;
+    }
 }
 
 .logo-first {
