--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,23 +1,64 @@
 .main-nav {
     display: flex;
     align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: space-between;
+
 }
+
 
 .navigator {
     margin-right: auto;
+    padding-left: 0;
+        margin-top: 0;
+        height: 100%;
+        width: 100%;
+    @media screen and (min-width: 768px) {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
 }
-
+@media screen and (max-width: 767px) {
+    margin-bottom: auto;
+}
+}
 .navlist {
     font-weight: 500;
     color: var(--main-color-text);
     padding-top: 32px;
     padding-bottom: 32px;
     display: block;
+
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
             color: var(--accent-color-text);
         }
+}
+
+.current {
+    position: relative;
+    color: var(--accent-color-text);
+}
+
+.current::after {
+    content: " ";
+
+    display: block;
+    height: 4px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    border-radius: 2px;
+
+    background-color: var(--accent-color-text);
 }
 .navigator-list {
     display: flex;
