--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -4,8 +4,8 @@
 }
 
 .hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
     text-align: center;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../img/Img-bgr/bgf.jpg);
@@ -16,32 +16,47 @@
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
-}
 
-.hero-block>.button {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-}
-
-.hero-block {
-    margin-left: auto;
-    margin-right: auto;
+    @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
+    }
 }
 
 .hero-title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--three-color-text);
-    width: 696px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 30px;
+    margin-bottom: 30px;  
 
+    @media screen and (min-width: 768px) {
+            width: 360px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            font-size: 44px;
+            line-height: 1.36;
+            width: 696px;
+        }
 }
+
+
+// .hero-block>.button {
+//     margin-left: auto;
+//     margin-right: auto;
+//     display: block;
+// }
+
+// .hero-block {
+//     margin-left: auto;
+//     margin-right: auto;
+//     padding-top: 200px;
+//     padding-bottom: 200px;
+// }
