--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,12 +1,24 @@
 .team {
     background-color: var(--second-bg);
-    padding: 94 0;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    }
+    
 }
 
 .team__list {
-    display: flex;
-    list-style-type: none;
-    gap: 30px;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        list-style-type: none;
+        gap: 30px;
+    }
+    
 }
 
 .team__card {
@@ -15,7 +27,12 @@
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    width: 270px;
+    // width: 270px;
+    margin-right: 0;
+    margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+        // margin-right: 30px;
+        }
 }
 
 .team__card-img {
