--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -11,23 +11,23 @@
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url("../../img/Img-bgr/bgr/Header/ img_mob@1x.png");
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-            background-image: url('../../img/Img-bgr/bgr/Header/ img_mob@2x.png');
+            background-image: url('../img/Img-bgr/bgr/Header/ img_mob@2x.png');
         }
 
     @media screen and (min-width: 481px) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url("../../img/Img-bgr/bgr/Header\ img_gm-1-t@1x.png");
     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
-        background-image: url('../../img/Img-bgr/bgr/Header\ img_gm-1-t@2x.png');
+        background-image: url('../img/Img-bgr/bgr/Header\ img_gm-1-t@2x.png');
         }
     }
 
     @media screen and (min-width: 769px) {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url("../../img/Img-bgr/bgr/Imgbg-1-d@1x.png");
+            url("../img/Img-bgr/bgr/Imgbg-1-d@1x.png");
     
     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
-                background-image: url('../../img/Img-bgr/bgr/Imgbg-1-d@2x.png');
+                background-image: url('../img/Img-bgr/bgr/Imgbg-1-d@2x.png');
             }
         }
     background-repeat: no-repeat;
