--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,7 @@ address {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../../img/Img-bgr/bgr/Header/ img_mob@2x.png");
+    background-image: url("../img/Img-bgr/bgr/Header/ img_mob@2x.png");
   }
 }
 @media screen and (min-width: 481px) {
@@ -261,18 +261,18 @@ address {
 }
 @media screen and (min-width: 481px) and (min-device-pixel-ratio: 2), screen and (min-width: 481px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 481px) and (min-resolution: 192dpi), screen and (min-width: 481px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../../img/Img-bgr/bgr/Header img_gm-1-t@2x.png");
+    background-image: url("../img/Img-bgr/bgr/Header img_gm-1-t@2x.png");
   }
 }
 @media screen and (min-width: 769px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../img/Img-bgr/bgr/Imgbg-1-d@1x.png");
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Img-bgr/bgr/Imgbg-1-d@1x.png");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/Img-bgr/bgr/Imgbg-1-d@1x.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/Img-bgr/bgr/Imgbg-1-d@1x.png");
   }
 }
 @media screen and (min-width: 769px) and (min-device-pixel-ratio: 2), screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 192dpi), screen and (min-width: 769px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../../img/Img-bgr/bgr/Imgbg-1-d@2x.png");
+    background-image: url("../img/Img-bgr/bgr/Imgbg-1-d@2x.png");
   }
 }
 @media screen and (min-width: 1200px) {
