--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -16,7 +16,10 @@
 }
 
 .list-item {
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
+    &:last-child {
+    margin-bottom: 0;
+    }
 
     @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 15px);
@@ -56,4 +59,3 @@
     width: 70px;
     height: 70px;
 }
- 
