--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,5 +1,5 @@
 .container {
-        width: 290px;
+      //   width: 290px;
         padding-left: 15px;
         padding-right: 15px;
         margin-left: auto;
@@ -7,7 +7,7 @@
 
 // mobile styles
 @media screen and (min-width: 480px) {
-        width: 450px;
+        width: 480px;
 }
 
 // tablet styles
