--- a/sass/layouts/_client.scss
+++ b/sass/layouts/_client.scss
@@ -1,7 +1,7 @@
 .clients__list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    // justify-content: center;
     display: flex;
     gap: 30px;
 }
@@ -10,11 +10,11 @@
     flex-basis: calc(100% / 2 - 15px);
   
 @media screen and (min-width: 768px) {
-    flex-basis: calc(100% / 3 - 30px);
+    flex-basis: calc((100% - 60px) / 3);
 }    
 
 @media screen and (min-width: 1200px) {
-    flex-basis: calc(100% / 6 - 30px);
+    flex-basis: calc((100% - 150px)/6);
     }
 }
 
