--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -9,31 +9,35 @@
     text-align: center;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("../img/Img-bgr/bgr/Header/ img_mob@1x.png");
+        url("../img/Img-bgr/bgr/img1bgm@1x.png");
+
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-            background-image: url('../img/Img-bgr/bgr/Header/ img_mob@2x.png');
+           background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+           url("../img/Img-bgr/bgr/img1bgm@2x.png");
         }
 
-    @media screen and (min-width: 481px) {
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("../img/Img-bgr/bgr/Header\ img_gm-1-t@1x.png");
+    @media screen and (min-width: 768px) {
+           background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+           url("../img/Img-bgr/bgr/img2bg@1x.png");
+    }
     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
-        background-image: url('../img/Img-bgr/bgr/Header\ img_gm-1-t@2x.png');
-        }
+           background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+           url("../img/Img-bgr/bgr/img2bg@2x.png");
     }
 
-    @media screen and (min-width: 769px) {
+    @media screen and (min-width: 1200px) {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
             url("../img/Img-bgr/bgr/Imgbg-1-d@1x.png");
     
     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
-                background-image: url('../img/Img-bgr/bgr/Imgbg-1-d@2x.png');
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+             url('../img/Img-bgr/bgr/Imgbg-1-d@2x.png');
             }
         }
     background-repeat: no-repeat;
     background-position: center;
     max-width: 1600px;
-    height: 600px;
+    // height: 600px;
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
