--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -11,11 +11,15 @@
 }
 
 .team__list {
+    &:last-child {
+            margin-bottom: 0;
+        }
     @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: wrap;
         list-style-type: none;
         gap: 30px;
+       
     }
     
 }
